# university_work

./: README.md
FirstSemester/Computational Logic/Exercises/: Exercises_ Boolean_functions_2022-2023.doc  Exercises_Logic Circuits_2022-2023.doc  Exercises_Predicate_Logic_2022-2023.docx  Exercises_Propositional_Logic_2022-2023.docx  Exercises_Resolution_predicate_2021-2022.docx  Exercises_Resolution_proposition_2022-2023.docx  Exercises_Semantic Tableaux_Method_2022-2023.docx
FirstSemester/Computational Logic/Lectures/: Lecture1_2022-2023.pptx  Lecture2_2021-2022.pptx  Lecture2_examples.docx  Lecture3_Propositional_logic_2022-2023.pptx  Lecture4_Propositional_logic_2022-2023.pptx  Lecture5_Predicate_logic_2022-2023.pptx  Operatii_baze_de_numeratie.doc
FirstSemester/Computer System Arhitecture/A12/: a12_3.asm
FirstSemester/Computer System Arhitecture/A2/: a2_prob18.2.asm  a2_prob18.3.asm  a2_prob18.asm  a2_prob3.2.asm  a2_prob3.3.asm  a2_prob3.asm  prob3.2.asm  set2prob18.asm  set2prob3.asm  set2prob3w.asm  set3prob18.asm  set3prob18III.asm  set3prob3.asm  setprob18w.asm  simple18.asm  simple3.asm  ste3prob3III.asm
FirstSemester/Computer System Arhitecture/A4/: lab4.2.asm  lab4.asm
FirstSemester/Computer System Arhitecture/A5/: lab5-18.asm  lab5-3.asm
FirstSemester/Computer System Arhitecture/A6/: lab6-18.asm  lab6.5.asm  lab_6_18.asm
FirstSemester/Computer System Arhitecture/A8/: a8_18.asm  (+5 more)
SecondSemester/DataStructures/Assignments/SortedSetBST/: App.cpp  CMakeLists.txt  ShortTest.cpp  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
(+709 files in other folders)
